Fixed a bug where the 'ok' button wasn't clickable on safari. it now looks a little weird on firefox, but at least it's clickable across safari, firefox, and chrome.

--- a/static-files/webxray.css
+++ b/static-files/webxray.css
@@ -262,7 +262,9 @@ div#webxray-wait-for-css-to-load {
 }
 
 .webxray-close-button {
-  float: right;
+  position: absolute;
+  right: 1em;
+  bottom: 1em;
   padding: 0.5em;
   border: 1px dotted white;
   cursor: pointer;
